Fix merge conflict

--- a/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
+++ b/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
@@ -1,10 +1,9 @@
 <nb-card [status]="modalStatus">
-  <nb-card-header class="d-flex justify-content-between align-items-center">
+  <nb-card-header class="d-flex justify-content-between align-items-start gap-1">
     {{ title }}
-
     <button
       *ngIf="cancellable"
-      status="primary"
+      [status]="modalStatus"
       type="button"
       nbButton
       shape="round"
