--- a/bot/admin/web/src/app/shared/components/form-control/form-control.component.html
+++ b/bot/admin/web/src/app/shared/components/form-control/form-control.component.html
@@ -1,12 +1,11 @@
 <div
-  class="d-flex flex-column mb-3"
-  data-testid="form-control"
+  class="d-flex flex-column"
+  [class.mb-3]="hasMargin"
 >
   <label
     *ngIf="label"
     [class.required]="required"
     [for]="name"
-    data-testid="label"
   >
     <abbr
       *ngIf="required"
