--- a/bot/admin/web/src/app/faq/faq-management/faq-management-filters/faq-management-filters.component.html
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management-filters/faq-management-filters.component.html
@@ -49,9 +49,10 @@
       </nb-select>
 
       <nb-checkbox
+        class="lineHeight-0"
+        formControlName="enabled"
         [checked]="enabled.value"
         [indeterminate]="enabled.value === null"
-        formControlName="enabled"
         (checkedChange)="enabledCheckChanged()"
       >
         Active
