--- a/bot/admin/web/src/app/faq/faq-management/faq-management-settings/faq-management-settings.component.html
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management-settings/faq-management-settings.component.html
@@ -5,7 +5,7 @@
   >
     <nb-card-header>
       <div class="d-flex justify-content-between align-items-start">
-        <h4>FAQ Parameters</h4>
+        FAQ Parameters
         <button
           type="button"
           nbButton
@@ -50,30 +50,27 @@
       </tock-form-control>
     </nb-card-body>
 
-    <nb-card-footer>
-      <div class="grid-button">
-        <button
-          type="button"
-          nbButton
-          outline
-          status="primary"
-          size="small"
-          (click)="close()"
-          data-testid="cancel-button"
-        >
-          Cancel
-        </button>
-        <button
-          type="button"
-          nbButton
-          status="primary"
-          size="small"
-          [disabled]="!canSave"
-          (click)="save()"
-        >
-          Save
-        </button>
-      </div>
+    <nb-card-footer class="card-footer-actions">
+      <button
+        nbButton
+        ghost
+        size="small"
+        type="button"
+        (click)="close()"
+        data-testid="cancel-button"
+      >
+        Cancel
+      </button>
+      <button
+        type="button"
+        nbButton
+        status="primary"
+        size="small"
+        [disabled]="!canSave"
+        (click)="save()"
+      >
+        Save
+      </button>
     </nb-card-footer>
   </nb-card>
 </form>
