--- a/bot/admin/web/src/app/faq/faq-training/faq-training-filters/faq-training-filters.component.html
+++ b/bot/admin/web/src/app/faq/faq-training/faq-training-filters/faq-training-filters.component.html
@@ -31,9 +31,9 @@
         </button>
       </nb-form-field>
 
-      <div>
+      <div class="d-flex align-items-center">
         <nb-toggle
-          class="mb-n2 mr-2"
+          class="mr-2"
           nbTooltip="Show unknown sentences"
           formControlName="showUnknown"
         >
