--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -1,5 +1,5 @@
 <nb-card id="modal-wrapper">
-  <nb-card-header class="d-flex justify-content-between align-items-start">
+  <nb-card-header class="d-flex justify-content-between align-items-start gap-1">
     Intent definition
     <button
       nbButton
