--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.scss
@@ -5,7 +5,7 @@
 
 .grid-columns {
   display: grid;
-  grid-gap: 0.2rem;
+  grid-gap: 0.5rem;
   grid-template-columns: 1fr;
   width: 100%;
   margin-right: 1.5rem;
@@ -49,7 +49,7 @@
   .grid-columns {
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: minmax(5rem, 4fr) minmax(5rem, 1fr) minmax(5rem, 2fr) minmax(3.5rem, 1fr) minmax(8rem, auto);
+    grid-template-columns: minmax(5rem, 4fr) minmax(5rem, 1fr) minmax(5rem, 2fr) minmax(11.25rem, auto);
   }
 }
 
