--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.scss
@@ -15,3 +15,11 @@
     }
   }
 }
+
+.entity {
+  border-radius: 0.45rem;
+  padding: 0rem 0.3rem 0rem 0.3rem;
+  font-size: 0.7rem;
+  display: inline-block;
+  line-height: 1.25rem;
+}
