--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -116,7 +116,7 @@
         <ng-container *ngFor="let sentence of _sentences">
           <li
             *ngIf="!isSentenceModified(sentence)"
-            class="sentences-list-item p-0 d-flex justify-content-between text-muted"
+            class="sentences-list-item p-0 d-flex justify-content-between text-mitigated"
           >
             <scenario-sentence-edit
               [scenario]="scenario"
