--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/sentence/sentence-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/sentence/sentence-edit.component.html
@@ -78,7 +78,7 @@
       <div
         *ngFor="let ctx of contexts"
         (click)="associateContextWithEntity(token, ctx)"
-        class="pointer text-muted py-1"
+        class="pointer text-mitigated py-1"
       >
         <nb-icon
           icon="code-download-outline"
