--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
@@ -136,7 +136,7 @@
               <ul>
                 <li
                   *ngFor="let sentence of item.intentDefinition._sentences"
-                  class="ellipsis text-muted"
+                  class="ellipsis text-mitigated"
                   [title]="sentence.text"
                 >
                   {{ sentence.text }}
