--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
@@ -35,7 +35,7 @@
       <nb-list>
         <nb-list-item
           *ngIf="!scenario.data.contexts.length"
-          class="d-block justify-content-between text-muted font-italic"
+          class="d-block justify-content-between text-mitigated font-italic"
         >
           No context defined yet
         </nb-list-item>
