--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
@@ -29,19 +29,19 @@
                 <strong>{{ intent.data.intentDefinition.name }}</strong>
                 <div>
                   label :
-                  <span class="text-muted">
+                  <span class="text-mitigated">
                     {{ intent.data.intentDefinition.label }}
                   </span>
                 </div>
                 <div>
                   category :
-                  <span class="text-muted">
+                  <span class="text-mitigated">
                     {{ intent.data.intentDefinition.category }}
                   </span>
                 </div>
                 <div *ngIf="intent.data.intentDefinition.description">
                   description :
-                  <span class="text-muted">
+                  <span class="text-mitigated">
                     {{ intent.data.intentDefinition.description }}
                   </span>
                 </div>
