--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -3,6 +3,7 @@
     <span
       (click)="setOrderBy('name')"
       class="pointer"
+      data-testid="order-by-name"
     >
       Name
       <nb-icon
@@ -16,6 +17,7 @@
     <span
       (click)="setOrderBy('category')"
       class="pointer"
+      data-testid="order-by-category"
     >
       Category
       <nb-icon
@@ -32,6 +34,7 @@
   *ngFor="let scenarioGroup of scenariosGroups"
   class="mb-2"
   [class.selected]="selectedScenarioGroup?.id === scenarioGroup.id"
+  data-testid="list"
 >
   <nb-accordion-item
     [expanded]="scenarioGroup._expanded"
@@ -40,10 +43,13 @@
     <nb-accordion-item-header>
       <div class="grid-columns">
         <div>
-          <div class="font-weight-bold initial-capitalize">
+          <div
+            class="font-weight-bold initial-capitalize"
+            data-testid="name"
+          >
             {{ scenarioGroup.name }}
           </div>
-          <span class="text-muted truncate">
+          <span class="text-mitigated truncate">
             {{ scenarioGroup.description }}
           </span>
         </div>
@@ -69,6 +75,7 @@
             class="mr-2"
             nbTooltip="Activate or deactivate this tick story"
             [disabled]="!scenarioGroupHasState(scenarioGroup, SCENARIO_STATE.current)"
+            data-testid="toggle-tick"
           ></nb-toggle>
           <button
             nbButton
@@ -76,6 +83,7 @@
             shape="round"
             nbTooltip="Open latest version"
             (click)="design($event, scenarioGroup)"
+            data-testid="open-last-scenario-version"
           >
             <nb-icon
               [icon]="scenarioGroupHasState(scenarioGroup, SCENARIO_STATE.draft) ? 'color-palette-outline' : 'eye-outline'"
@@ -87,6 +95,7 @@
             shape="round"
             nbTooltip="Edit scenario group"
             (click)="editScenarioGroup($event, scenarioGroup)"
+            data-testid="edit-scenario-group"
           >
             <nb-icon icon="edit-outline"></nb-icon>
           </button>
@@ -96,6 +105,7 @@
             shape="round"
             nbTooltip="Delete scenarios group and corresponding story"
             (click)="deleteScenarioGroup($event, scenarioGroup)"
+            data-testid="delete-scenario-group"
           >
             <nb-icon icon="trash-2-outline"></nb-icon>
           </button>
@@ -113,9 +123,10 @@
       <div
         class="grid-accordion-item-body gap-1"
         *ngFor="let scenarioVersion of scenarioGroup.versions"
+        data-testid="list-versions"
       >
         <div>
-          <span class="d-inline d-sm-none text-muted">Creation date : </span>
+          <span class="d-inline d-sm-none text-mitigated">Creation date : </span>
           <span
             [ngClass]="{ 'font-weight-bold': scenarioVersion.state === SCENARIO_STATE.current }"
             [nbTooltip]="scenarioVersion.creationDate | date: 'y/MM/dd HH:mm:ss'"
@@ -124,7 +135,7 @@
           </span>
         </div>
         <div>
-          <span class="d-inline d-sm-none text-muted">Update date : </span>
+          <span class="d-inline d-sm-none text-mitigated">Update date : </span>
           <span
             [ngClass]="{ 'font-weight-bold': scenarioVersion.state === SCENARIO_STATE.current }"
             [nbTooltip]="scenarioVersion.updateDate | date: 'y/MM/dd HH:mm:ss'"
@@ -136,8 +147,8 @@
           class="d-flex"
           [ngClass]="{ 'font-weight-bold': scenarioVersion.state === SCENARIO_STATE.current }"
         >
-          <span class="d-inline d-sm-none text-muted">Status : </span>
-          <span>
+          <span class="d-inline d-sm-none text-mitigated">Status : </span>
+          <span data-testid="version-state">
             {{ scenarioVersion.state }}
           </span>
           <nb-icon
@@ -148,8 +159,8 @@
           ></nb-icon>
         </div>
 
-        <div class="text-muted truncate">
-          <span class="d-inline d-sm-none text-muted">Version comment : </span>
+        <div class="text-mitigated truncate">
+          <span class="d-inline d-sm-none text-mitigated">Version comment : </span>
           <span class="font-italic">
             {{ scenarioVersion.comment }}
           </span>
@@ -162,6 +173,7 @@
             shape="round"
             nbTooltip="Open scenario version"
             [routerLink]="'./' + scenarioGroup.id + '/' + scenarioVersion.id"
+            data-testid="open-scenario-version"
           >
             <nb-icon [icon]="scenarioVersion.state === SCENARIO_STATE.draft ? 'color-palette-outline' : 'eye-outline'"></nb-icon>
           </button>
@@ -172,6 +184,7 @@
             shape="round"
             nbTooltip="Copy and edit a new version"
             (click)="duplicate(scenarioGroup, scenarioVersion)"
+            data-testid="duplicate-scenario-version"
           >
             <nb-icon icon="copy-outline"></nb-icon>
           </button>
@@ -182,6 +195,7 @@
             shape="round"
             nbTooltip="Export scenario version"
             (click)="download(scenarioGroup, scenarioVersion)"
+            data-testid="export-scenario-version"
           >
             <nb-icon icon="download-outline"></nb-icon>
           </button>
@@ -192,6 +206,7 @@
             shape="round"
             nbTooltip="Delete scenario version"
             (click)="deleteScenarioVersion($event, scenarioGroup, scenarioVersion)"
+            data-testid="delete-scenario-version"
           >
             <nb-icon icon="trash-2-outline"></nb-icon>
           </button>
