--- a/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
+++ b/bot/admin/web/src/app/shared/components/choice-dialog/choice-dialog.component.html
@@ -22,7 +22,7 @@
       </li>
     </ul>
   </nb-card-body>
-  <nb-card-footer class="d-flex gap-1 flex-wrap justify-content-end">
+  <nb-card-footer class="card-footer-actions">
     <button
       *ngFor="let actionDef of actions"
       nbButton
