--- a/bot/admin/web/src/app/shared/components/file-upload/file-upload.component.html
+++ b/bot/admin/web/src/app/shared/components/file-upload/file-upload.component.html
@@ -70,7 +70,7 @@
 </div>
 <small
   *ngIf="fileTypeAccepted"
-  class="text-muted"
+  class="text-mitigated"
   data-testid="file-type-accepted"
 >
   File type<span *ngIf="fileTypeAccepted.length > 1">s</span> accepted: {{ fileTypes }}
