--- a/bot/admin/web/src/app/faq/faq-management/faq-management-list/faq-management-list.component.html
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management-list/faq-management-list.component.html
@@ -20,7 +20,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <div class="truncate text-muted">
+          <div class="truncate text-mitigated">
             <small
               class="d-block"
               *ngIf="faq.utterances.length == 1"
@@ -38,7 +38,7 @@
         </div>
 
         <div class="col-md-6">
-          <div class="truncate text-muted">
+          <div class="truncate text-mitigated">
             <small class="d-block">Answer</small>
             {{ faq.answer }}
           </div>
