--- a/bot/admin/web/src/app/faq/faq-training/faq-training-list/faq-training-list.component.html
+++ b/bot/admin/web/src/app/faq/faq-training/faq-training-list/faq-training-list.component.html
@@ -89,7 +89,7 @@
       class="pointer"
       (click)="toggle(sentence)"
     >
-      <small class="d-block text-muted">
+      <small class="d-block text-mitigated">
         <time>{{ sentence.creationDate | date: 'MM/dd HH:mm' }}</time>
       </small>
       <span data-testid="text">
