--- a/bot/admin/web/src/app/shared/components/no-data-found/no-data-found.component.html
+++ b/bot/admin/web/src/app/shared/components/no-data-found/no-data-found.component.html
@@ -7,7 +7,7 @@
     />
     <div>
       <h2
-        class="text-muted"
+        class="text-mitigated"
         data-testid="title"
       >
         {{ title }}
