--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -1,3 +1,4 @@
+@import '~@nebular/theme/styles/global/_breakpoints.scss';
 @import '~@nebular/theme/styles/theming';
 @import '~@nebular/theme/styles/themes';
 
@@ -19,22 +20,30 @@
   line-height: 0;
 }
 
-.nb-theme-dark .text-muted {
-  color: nb-theme(color-basic-600) !important;
+.nb-theme-default .text-mitigated {
+  color: #6c757d;
+}
+
+.nb-theme-dark .text-mitigated {
+  color: nb-theme(color-basic-600);
 }
 
 .valign-middle {
   vertical-align: middle;
 }
+
 .pointer {
   cursor: pointer;
 }
+
 .cursor-move {
   cursor: move;
 }
+
 .cursor-default {
   cursor: default;
 }
+
 .initial-capitalize::first-letter {
   text-transform: uppercase;
 }
@@ -131,15 +140,37 @@ nb-accordion.selected {
   grid-gap: 0.5rem;
 }
 
-nb-toggle > label {
-  margin: 0;
-}
-
 @media screen and (min-width: 400px) {
   .card-footer-actions {
     flex-direction: row;
     width: 100%;
     justify-content: flex-end;
     flex-wrap: wrap;
+  }
+}
+
+nb-toggle > label {
+  margin: 0;
+}
+
+nb-dialog-container {
+  max-width: 95vw;
+}
+
+@include media-breakpoint-up(md) {
+  nb-dialog-container {
+    max-width: 80vw;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  nb-dialog-container {
+    max-width: 60vw;
+  }
+}
+
+@include media-breakpoint-up(xl) {
+  nb-dialog-container {
+    max-width: 40vw;
   }
 }
