conditions checks updates for intents context

--- a/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.html
@@ -19,6 +19,8 @@
         *ngIf="!hasStepError(step.mode)"
         class="error"
         icon="alert-circle-outline"
+        [nbTooltip]="getStepErrorTooltip(step.mode)"
+        (click)="$event.stopPropagation(); displayNotMetConditionToAccesNextStage(step.mode)"
       ></nb-icon>
     </div>
     <div class="label-index">
